# better_bitset

./: .gitignore  CMakeLists.txt
include/: better_bitset.hpp
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  results.txt
src/test/: CMakeLists.txt  test_first_functions.cpp
